@@ -50,6 +50,11 @@ namespace xboxkrnl
 #include <stdio.h>
 
 // ******************************************************************
+// * data: EmuAutoSleepRate
+// ******************************************************************
+uint32 EmuAutoSleepRate = -1;
+
+// ******************************************************************
 // * func: EmuInitFS
 // ******************************************************************
 void EmuInitFS()
